--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,8 @@
-= Audio Library for Arduino Zero=
+= Audio Library for Arduino Zero or SAMD based boards=
 
-The Zerodio library enables an Arduino Zero board to play back 8bit .wav files 
+The SamdAudio library enables an Arduino Zero board to playback 8bit .wav files 
 from a storage device like an SD card, without blocking program execution.
-
-For more information about this library please visit us at
-http://arduino.cc/en/Reference/Audio
+Compatible with Atmel SAMD serie MCU.
 
 == License ==
 
